--- a/src/main/resources/assets/thunderhack/lang/en_us.json
+++ b/src/main/resources/assets/thunderhack/lang/en_us.json
@@ -193,5 +193,7 @@
   "descriptions.commands.staff": "Add players to staff (players in vanish).",
   "descriptions.commands.tracker": "Add players to Tracker module.",
   "descriptions.commands.vclip": "Clip vertically.",
-  "descriptions.commands.waypoint": "Add waypoint (turn on WayPoints!!!)."
+  "descriptions.commands.waypoint": "Add waypoint (turn on WayPoints!!!).",
+
+  "descriptions.sliekos-tweaks.meteorspeedmine": "Speedmine from meteor (grant haste effect). No copypaste only idea"
 }
