--- a/src/main/resources/assets/thunderhack/lang/ru_ru.json
+++ b/src/main/resources/assets/thunderhack/lang/ru_ru.json
@@ -1,36 +1,70 @@
 {
+  "descriptions.client.antiserverrp": "Отключает ресурспаки сервера.",
+  "descriptions.client.clickgui": "Интерфейс ThunderHack.",
+  "descriptions.client.clientsettings": "Основные настройки ThunderHack",
+  "descriptions.client.discordrpc": "Дискорд статус",
+  "descriptions.client.fastlatency": "Вычисляет пинг быстрее, чем метод Minecraft.",
+  "descriptions.client.hudeditor": "Интерфейс для редактирования элементов hud.",
+  "descriptions.client.mainsettings": "Глобальные настройки ThunderHack.",
+  "descriptions.client.media": "Скрывает ники и скины других игроков.",
+  "descriptions.client.notifications": "Уведомления о действиях ThunderHack.",
+  "descriptions.client.optifinecapes": "Позволяет видеть плащи Optifine",
+  "descriptions.client.soundfx": "Изменяет разные звуки в игре.",
+  "descriptions.client.thundergui": "Еще один вариант графического интерфейса.",
+  "descriptions.client.waypoints": "Отображает вейпоинты.",
   "descriptions.combat.aimbot": "Плавная наводка на цель.",
   "descriptions.combat.antibot": "Удаляет ботов, созданных античитом.",
   "descriptions.combat.aura": "Автоматически атакует сущности.",
   "descriptions.combat.autoanchor": "Автоматически ставит и взрывает якоря.",
+  "descriptions.combat.autobed": "Автоматически ставит и взрывает кровати.",
   "descriptions.combat.autobuff": "Aвтоматически бросает под тебя зелья с эффектами.",
   "descriptions.combat.autocrystal": "Автоматически ставит и взрывает кристаллы.",
-  "descriptions.movement.autowalk": "Идет вперёд за вас",
   "descriptions.combat.autocrystalbase": "Автоматически ставит обсидиан для кристаллов.",
   "descriptions.combat.autogapple": "Автоматически ест золотые яблоки.",
   "descriptions.combat.automine": "Автоматически ломает Surround цели.",
   "descriptions.combat.autototem": "Автоматически помещает тотем и другие предметы в левую руку.",
   "descriptions.combat.autotrap": "Автоматически трапит игроков.",
   "descriptions.combat.autoweb": "Ставит паутину в ноги цели",
-  "descriptions.combat.autobed": "Автоматически ставит и взрывает кровати.",
-  "descriptions.combat.tntaura": "Автоматически ставит и взрывает динамит.",
   "descriptions.combat.blocker": "Защищает Surround от cev, civ и других.",
+  "descriptions.combat.bowpop": "Эксплойт для увеличения урона от лука.",
   "descriptions.combat.bowspam": "Автоматически отпускает тетиву.",
   "descriptions.combat.burrow": "Ставит блок/паутину/череп тебе в ножки.",
   "descriptions.combat.cevbreaker": "Копает блоки над головой цели и взрывает кристаллы.",
   "descriptions.combat.criticals": "Делает каждый удар критическим.",
-  "descriptions.combat.bowpop": "Эксплойт для увеличения урона от лука.",
   "descriptions.combat.hitboxes": "Позволяет увеличивать хитбоксы сущностей.",
   "descriptions.combat.holefill": "Заполняет холки",
   "descriptions.combat.pistonaura": "Толкает кристаллы в игрока с помощью поршней.",
   "descriptions.combat.pistonpush": "Выталкивает игроков из холок с помощью поршней.",
+  "descriptions.combat.quiver": "Автоматически бафает стрелами.",
   "descriptions.combat.reach": "Увеличивает расстояние интеракта",
   "descriptions.combat.selftrap": "Автоматически трапит тебя.",
   "descriptions.combat.surround": "Защищает твои ножки указанными блоками.",
   "descriptions.combat.targetstrafe": "Стрейфится вокруг цели.",
+  "descriptions.combat.tntaura": "Автоматически ставит и взрывает динамит.",
   "descriptions.combat.triggerbot": "Атакует существ под прицелом.",
-  "descriptions.combat.quiver": "Автоматически бафает стрелами.",
-
+  "descriptions.commands.bind": "Добавить бинд к модулю.",
+  "descriptions.commands.cfg": "Выбрать/сохранить конфигурацию.",
+  "descriptions.commands.cheststealer": "Выбрать предметы, которые ChestStealer будет игнорировать/забирать.",
+  "descriptions.commands.draw": "Отключить видимость модуля в ArrayList.",
+  "descriptions.commands.dropall": "Выбросить все предметы из инвентаря.",
+  "descriptions.commands.eclip": "Клипнуться с помощью элитр.",
+  "descriptions.commands.friend": "Добавить/удалить друга.",
+  "descriptions.commands.getnbt": "Добавить вейпоинт (надо включить WayPoints!!!).",
+  "descriptions.commands.gps": "Добавить стрелку, указывающую на координаты.",
+  "descriptions.commands.hclip": "Клипнуться горизонтально.",
+  "descriptions.commands.help": "Перечислить все команды.",
+  "descriptions.commands.login": "Сменить аккаунт.",
+  "descriptions.commands.macro": "Создание макрокоманд.",
+  "descriptions.commands.module": "Настроить модуль через чат.",
+  "descriptions.commands.openfolder": "Открыть папку с конфигами.",
+  "descriptions.commands.prefix": "Изменить префикс клиента.",
+  "descriptions.commands.resetbinds": "Удалить бинды из модулей.",
+  "descriptions.commands.rpc": "Установить свое изображение/гифку в DiscordRPC (только tenor или imgur!!!).",
+  "descriptions.commands.search": "Добавить блоки в Search.",
+  "descriptions.commands.staff": "Добавить игроков в staffBoard (игроки будут видны если они в ванише).",
+  "descriptions.commands.tracker": "Добавить игроков в Tracker.",
+  "descriptions.commands.vclip": "Клипнуться вертикально.",
+  "descriptions.commands.waypoint": "Добавить вейпоинт (надо включить WayPoints!!!).",
   "descriptions.misc.autoauth": "Регистрирует тебя на серверах.",
   "descriptions.misc.autoez": "Пишет EZ при убийстве цели.",
   "descriptions.misc.autofish": "Авто рыбалка.",
@@ -43,8 +77,8 @@
   "descriptions.misc.chorusexploit": "Задерживает телепорт хоруса.",
   "descriptions.misc.ebattesratte": "Токсичный бот.",
   "descriptions.misc.extratab": "Расширенный таб.",
-  "descriptions.misc.fghelper": "Твики для mcfunny.su.",
   "descriptions.misc.fakeplayer": "Фейковый игрок для тестирования.",
+  "descriptions.misc.fghelper": "Твики для mcfunny.su.",
   "descriptions.misc.ghost": "Камера после смерти.",
   "descriptions.misc.hitsound": "UWU nyaaaa~ звуки.",
   "descriptions.misc.itemscroller": "Быстро перекладывать предметы в сундуке.",
@@ -61,41 +95,10 @@
   "descriptions.misc.visualrange": "Предупреждает тебя об игроках в зоне видимости.",
   "descriptions.misc.worldtweaks": "Твики для мира.",
   "descriptions.misc.xray": "Алмазы? Без проблем.",
-
-  "descriptions.render.animations": "Анимация удара.",
-  "descriptions.render.blockhighlight": "Подсвечивает блок под прицелом.",
-  "descriptions.render.breadcrumbs": "Линия при движении.",
-  "descriptions.render.breakhighlight": "Подсвечивает ломание блоков.",
-  "descriptions.render.chams": "Изменять цвет предметов в руке.",
-  "descriptions.render.damagetint": "Твой экран станет красным при низком здоровье.",
-  "descriptions.render.esp": "Подсвечивает выбранные херни.",
-  "descriptions.render.fov": "Модификация поля зрения.",
-  "descriptions.render.freecam": "Открепляет камеру от игрока.",
-  "descriptions.render.fullbright": "Отключает темноту.",
-  "descriptions.render.hitparticles": "Создаёт частицы при ударе.",
-  "descriptions.render.holeesp": "Подсвечивает холки.",
-  "descriptions.render.itemesp": "Подсвечивает предметы.",
-  "descriptions.render.jumpcircle": "Круги при прыжке.",
-  "descriptions.render.killeffect": "Крутые эффекты, когда кто-то умирает.",
-  "descriptions.render.logoutspots": "Подсвечивает места лива игроков",
-  "descriptions.render.nametags": "Отображает важную информацию об игроке.",
-  "descriptions.render.nocameraclip": "Удаляет клип камеры от третьего лица.",
-  "descriptions.render.norender": "Удаляет нежелательные лаганные вещи.",
-  "descriptions.render.popchams": "Подсвечивает тотемпопы игрока.",
-  "descriptions.render.search": "Подсвечивает выбранные блоки.",
-  "descriptions.render.shaders": "Шейдеры на игроков и предметы.",
-  "descriptions.render.storageesp": "Подсвечивает выбранные хранилища.",
-  "descriptions.render.tracers": "Рисует линии до игроков.",
-  "descriptions.render.trails": "Показывает пути стрел, перлов и игроков.",
-  "descriptions.render.trajectories": "Предсказывает пути стрел и перлов.",
-  "descriptions.render.tunnelesp": "Подсвечивает туннели.",
-  "descriptions.render.viewmodel": "Модификация рук.",
-  "descriptions.render.voidesp": "Подсвечивает пустоту.",
-  "descriptions.render.particles": "Различные частицы в мире.",
-
   "descriptions.movement.antivoid": "Не позволяет упасть в бездну.",
   "descriptions.movement.antiweb": "Действия при столкновении с паутиной.",
   "descriptions.movement.autosprint": "Спринт",
+  "descriptions.movement.autowalk": "Идет вперёд за вас",
   "descriptions.movement.blink": "Задерживает пакеты движения.",
   "descriptions.movement.boatfly": "Позволяет летать на лодках.",
   "descriptions.movement.damagefly": "Обход матрикса.",
@@ -123,7 +126,6 @@
   "descriptions.movement.timer": "Позволяет изменять тикрейт игры.",
   "descriptions.movement.velocity": "Предотвращает отбрасывание.",
   "descriptions.movement.waterspeed": "Увеличивает скорость в воде.",
-
   "descriptions.player.airplace": "Позволяет размещать блоки в воздухе.",
   "descriptions.player.antiaim": "Утро первого января (бесполезно).",
   "descriptions.player.antiattack": "Предотвращает ненужные атаки.",
@@ -156,42 +158,35 @@
   "descriptions.player.tpssync": "Синхронизирует внутренний игровой таймер с таймером сервера.",
   "descriptions.player.viewlock": "Блокирует камеру.",
   "descriptions.player.xcarry": "Позволяет хранить предметы в крафте и мышке.",
-
-  "descriptions.client.antiserverrp": "Отключает ресурспаки сервера.",
-  "descriptions.client.clickgui": "Интерфейс ThunderHack.",
-  "descriptions.client.clientsettings": "Основные настройки ThunderHack",
-  "descriptions.client.hudeditor": "Интерфейс для редактирования элементов hud.",
-  "descriptions.client.mainsettings": "Глобальные настройки ThunderHack.",
-  "descriptions.client.media": "Скрывает ники и скины других игроков.",
-  "descriptions.client.notifications": "Уведомления о действиях ThunderHack.",
-  "descriptions.client.optifinecapes": "Позволяет видеть плащи Optifine",
-  "descriptions.client.discordrpc": "Дискорд статус",
-  "descriptions.client.fastlatency": "Вычисляет пинг быстрее, чем метод Minecraft.",
-  "descriptions.client.thundergui": "Еще один вариант графического интерфейса.",
-  "descriptions.client.waypoints": "Отображает вейпоинты.",
-  "descriptions.client.soundfx": "Изменяет разные звуки в игре.",
-
-  "descriptions.commands.bind": "Добавить бинд к модулю.",
-  "descriptions.commands.cfg": "Выбрать/сохранить конфигурацию.",
-  "descriptions.commands.cheststealer": "Выбрать предметы, которые ChestStealer будет игнорировать/забирать.",
-  "descriptions.commands.draw": "Отключить видимость модуля в ArrayList.",
-  "descriptions.commands.dropall": "Выбросить все предметы из инвентаря.",
-  "descriptions.commands.eclip": "Клипнуться с помощью элитр.",
-  "descriptions.commands.friend": "Добавить/удалить друга.",
-  "descriptions.commands.gps": "Добавить стрелку, указывающую на координаты.",
-  "descriptions.commands.hclip": "Клипнуться горизонтально.",
-  "descriptions.commands.help": "Перечислить все команды.",
-  "descriptions.commands.login": "Сменить аккаунт.",
-  "descriptions.commands.macro": "Создание макрокоманд.",
-  "descriptions.commands.module": "Настроить модуль через чат.",
-  "descriptions.commands.openfolder": "Открыть папку с конфигами.",
-  "descriptions.commands.prefix": "Изменить префикс клиента.",
-  "descriptions.commands.resetbinds": "Удалить бинды из модулей.",
-  "descriptions.commands.rpc": "Установить свое изображение/гифку в DiscordRPC (только tenor или imgur!!!).",
-  "descriptions.commands.search": "Добавить блоки в Search.",
-  "descriptions.commands.staff": "Добавить игроков в staffBoard (игроки будут видны если они в ванише).",
-  "descriptions.commands.tracker": "Добавить игроков в Tracker.",
-  "descriptions.commands.vclip": "Клипнуться вертикально.",
-  "descriptions.commands.waypoint": "Добавить вейпоинт (надо включить WayPoints!!!).",
-  "descriptions.commands.getnbt": "Добавить вейпоинт (надо включить WayPoints!!!)."
+  "descriptions.render.animations": "Анимация удара.",
+  "descriptions.render.blockhighlight": "Подсвечивает блок под прицелом.",
+  "descriptions.render.breadcrumbs": "Линия при движении.",
+  "descriptions.render.breakhighlight": "Подсвечивает ломание блоков.",
+  "descriptions.render.chams": "Изменять цвет предметов в руке.",
+  "descriptions.render.damagetint": "Твой экран станет красным при низком здоровье.",
+  "descriptions.render.esp": "Подсвечивает выбранные херни.",
+  "descriptions.render.fov": "Модификация поля зрения.",
+  "descriptions.render.freecam": "Открепляет камеру от игрока.",
+  "descriptions.render.fullbright": "Отключает темноту.",
+  "descriptions.render.hitparticles": "Создаёт частицы при ударе.",
+  "descriptions.render.holeesp": "Подсвечивает холки.",
+  "descriptions.render.itemesp": "Подсвечивает предметы.",
+  "descriptions.render.jumpcircle": "Круги при прыжке.",
+  "descriptions.render.killeffect": "Крутые эффекты, когда кто-то умирает.",
+  "descriptions.render.logoutspots": "Подсвечивает места лива игроков",
+  "descriptions.render.nametags": "Отображает важную информацию об игроке.",
+  "descriptions.render.nocameraclip": "Удаляет клип камеры от третьего лица.",
+  "descriptions.render.norender": "Удаляет нежелательные лаганные вещи.",
+  "descriptions.render.particles": "Различные частицы в мире.",
+  "descriptions.render.popchams": "Подсвечивает тотемпопы игрока.",
+  "descriptions.render.search": "Подсвечивает выбранные блоки.",
+  "descriptions.render.shaders": "Шейдеры на игроков и предметы.",
+  "descriptions.render.storageesp": "Подсвечивает выбранные хранилища.",
+  "descriptions.render.tracers": "Рисует линии до игроков.",
+  "descriptions.render.trails": "Показывает пути стрел, перлов и игроков.",
+  "descriptions.render.trajectories": "Предсказывает пути стрел и перлов.",
+  "descriptions.render.tunnelesp": "Подсвечивает туннели.",
+  "descriptions.render.viewmodel": "Модификация рук.",
+  "descriptions.render.voidesp": "Подсвечивает пустоту.",
+  "descriptions.sliekos-tweaks.meteorspeedmine": "Спидмайн как на метеоре (даётся эффект). Никакого копипаста, только позаимствована идея"
 }
