--- a/src/main/resources/assets/thunderhack/lang/en_us.json
+++ b/src/main/resources/assets/thunderhack/lang/en_us.json
@@ -96,7 +96,7 @@
   "descriptions.render.nocameraclip": "Removes the third-person camera clip.",
   "descriptions.render.norender": "Removes unwanted laggy things.",
   "descriptions.render.popchams": "Highlights player's totem pops.",
-  "descriptions.render.search": "Highlights selected blocks.",
+  "descriptions.render.blockesp": "Highlights selected blocks.",
   "descriptions.render.shaders": "Shader esp.",
   "descriptions.render.soundesp": "Highlights sounds.",
   "descriptions.render.storageesp": "Highlights selected storages.",
@@ -220,7 +220,7 @@
   "descriptions.commands.prefix": "Change prefix of client.",
   "descriptions.commands.resetbinds": "Reset keybinds.",
   "descriptions.commands.rpc": "Set custom picture/gif to DiscordRPC (Only tenor or imgur!!!).",
-  "descriptions.commands.search": "Add blocks to search.",
+  "descriptions.commands.blockesp": "Add blocks to BlockESP.",
   "descriptions.commands.staff": "Add players to staff (players in vanish).",
   "descriptions.commands.tracker": "Add players to Tracker module.",
   "descriptions.commands.vclip": "Clip vertically.",
