--- a/src/main/resources/assets/thunderhack/lang/ru_ru.json
+++ b/src/main/resources/assets/thunderhack/lang/ru_ru.json
@@ -97,7 +97,7 @@
   "descriptions.render.nocameraclip": "Удаляет клип камеры от третьего лица.",
   "descriptions.render.norender": "Удаляет нежелательные лаганные вещи.",
   "descriptions.render.popchams": "Подсвечивает тотемпопы игрока.",
-  "descriptions.render.search": "Подсвечивает выбранные блоки.",
+  "descriptions.render.blockesp": "Подсвечивает выбранные блоки.",
   "descriptions.render.soundesp": "Подсвечивает звуки.",
   "descriptions.render.shaders": "Шейдеры на игроков и предметы.",
   "descriptions.render.storageesp": "Подсвечивает выбранные хранилища.",
@@ -220,7 +220,7 @@
   "descriptions.commands.prefix": "Изменить префикс клиента.",
   "descriptions.commands.resetbinds": "Удалить бинды из модулей.",
   "descriptions.commands.rpc": "Установить свое изображение/гифку в DiscordRPC (только tenor или imgur!!!).",
-  "descriptions.commands.search": "Добавить блоки в Search.",
+  "descriptions.commands.blockesp": "Добавить блоки в BlockESP.",
   "descriptions.commands.staff": "Добавить игроков в staffBoard (игроки будут видны если они в ванише).",
   "descriptions.commands.tracker": "Добавить игроков в Tracker.",
   "descriptions.commands.vclip": "Клипнуться вертикально.",
