--- a/src/main/resources/assets/thunderhack/lang/ru_ru.json
+++ b/src/main/resources/assets/thunderhack/lang/ru_ru.json
@@ -230,8 +230,5 @@
   "descriptions.commands.kit": "Команда для настройки AutoGear.",
   "descriptions.commands.gettreasure": "Узнать координаты клада из карты сокровищ.",
   "descriptions.commands.tabparse": "Сохранить список игроков в файл.",
-  "descriptions.commands.gc": "Очистить оперативную память.",
-  "descriptions.player.meteorspeedmine": "Спидмайн как на метеоре (даётся эффект). Никакого копипаста, только позаимствована идея",
-  "descriptions.client.selfdestruct": "Полностью выключает чит и удаляет его из памяти. Сделай бекап своего конфига перед включением!",
-  "descriptions.client.telegramapi": "Автоматически отошлёт тебе в тг информацию о мистах"
+  "descriptions.commands.gc": "Очистить оперативную память."
 }
